# rust_samples

./: README.md
array_type/: Cargo.toml
asynchrony/: Cargo.toml
cargo_workspace/: README.md
closures/: README.md
closures_2/: README.md
closures_3/: README.md
errors_operator/: Cargo.toml
errors_representation/: Cargo.toml
errors_unrecoverable/: Cargo.toml
exercises/: Cargo.toml  main.rs
expect_sample/: Cargo.toml
generic_functions_2/: Cargo.toml
generic_methods_2/: Cargo.toml
guessing_game_1/: Cargo.toml
guessing_game_3/: Cargo.toml
hash_maps_scopes/: Cargo.toml
iterators/: README.md
libraries/: Cargo.toml
libraries/src/: main.rs
lifetimes_elision/: Cargo.toml  README.md
lifetimes_functions/: Cargo.toml  README.md
lifetimes_methods/: Cargo.toml  README.md
lifetimes_static/: Cargo.toml  README.md
lifetimes_structs/: README.md
macros_declarative/: Cargo.toml
macros_procedural/: Cargo.toml
match_control_flow/: README.md
methods_several_params/: Cargo.toml
minigrep/: README.md
minigrep_3/: Cargo.toml  README.md
minigrep_4/: Cargo.toml  README.md
minigrep_5/: Cargo.toml  README.md
minigrep_6/: Cargo.toml  README.md
minigrep_env/: Cargo.toml  README.md
minigrep_errs/: Cargo.toml  README.md
minigrep_iterator/: Cargo.toml  README.md
minigrep_tdd/: Cargo.toml  README.md
ownership_mutable_references/: Cargo.toml
ownership_parameters/: Cargo.toml
ownership_return_scope/: Cargo.toml
parallelism/: Cargo.toml
profiles/: Cargo.toml  README.md
project_1/: main.rs
pub_use/: Cargo.toml  README.md
(+202 files in other folders)
