[package]
name = "libraries"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
cxx = "1.0.180"
flume = "0.11.1"
hdrhistogram = "7.5.4"
heapless = "0.9.1"
itertools = "0.14.0"
nix = "0.30.1"
pin-project = "1.1.10"
ring = "0.17.14"
slab = "0.4.11"
static_assertions = "1.1.0"
thiserror = "2.0.16"
tower = "0.5.2"
tracing = "0.1.37"
